# ReguMap-AI

./: .env.example  .gitignore  agents.py  app.py  core_constants.py  crawler.py  docker-compose.yml  engine.py  find_model.py  generate_stress_test_manual.py  knowledge_graph.py  list_models.py  parser.py  pdf_mapper.py  refiner.py  regulatory_watchdog.py  requirements.txt  run_stress_test.py  schemas.py  security.py  test.py  test_api.py  ui_utils.py  validate_easa_data.py
backend/: Dockerfile  agents.py  crawler.py  engine.py  knowledge_graph.py  pdf_mapper.py  purge_obsolete_refs.py  pyproject.toml  requirements.txt  sample_easa.xml  sample_s1000d.xml  schemas.py  setup_test_data.py
backend/agents/: __init__.py  board.py  orchestrator.py  symbolic_validator.py  system_prompts.py
backend/api_pkg/: dependencies.py  main.py  schemas.py
backend/audit/: audit_s1_compliance.py  audit_s2_network.py  audit_s3_pipeline.py  audit_s4_explainability.py  audit_s5_cybersecurity.py
backend/graph/: init_schema.cypher  neo4j_schema.py  persistence.py  query_engine.py
backend/ingestion/: contracts.py  easa_parser.py  graph_ingester.py  hasher.py  manual_parser.py  nlp_extractor.py  s1000d_parser.py
backend/legacy/: app.py  main.py  ui_utils.py
backend/scripts/: refactor_vocabulary.py
backend/security/: __init__.py  presidio_engine.py  vault.py
backend/services/: __init__.py  event_bus.py  gap_analyzer.py  ingestion_service.py  report_generator.py
backend/tests/: conftest.py  test_agents.py  test_api_routes.py  test_core_constants.py  test_easa_parser.py  test_purge.py  (+13 more)
(+54 files in other folders)
