[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regumap-ai"
version = "1.0.0"
description = "Aeronautical Regulatory Compliance Engine"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "api_pkg*", "core*", "graph*", "ingestion*", "models*", "security*", "services*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
